Fixed spacing

--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -211,7 +211,7 @@
       background-color: $brand-dark;
       // border-bottom: 0;
       .content {
-        padding: 5px 10px;
+        padding: 10px 20px;
         a {
           color: $brand-grey;
         }
